# tei-processing-model-lib

./: .gitignore  README.md  Taskfile  pyproject.toml
examples/: benchmark.py
src/: __init__.py  config.py  pm.py  utils.py
src/core/: behaviour.xsl  compile.xsl
test/: test_main.py  test_utils.py
test/example/: sample.odd
